@@ -1,0 +1,9 @@
+01	From Here To There	 		Battlefield Band
+02	Daysleeper					REM
+03 	We Changed The World		Clint Crighton 
+04	Khe Sanh					Jimmy Barnes
+05 	Japon Pon					Calle 
+
+https://www.youtube.com/results?search_query=gorillaz+hong+kong&oq=gorillaz&gs_l=youtube.3.2.0l10.1244.2985.0.8611.8.5.0.3.3.0.98.412.5.5.0...0.0...1ac.1.11.youtube.M6H-6O6fBmw
+https://www.youtube.com/results?search_query=george+harrison+hong+kong+blues&oq=george+harrison+hong+kong&gs_l=youtube.3.0.0.250.5443.0.6764.21.15.0.6.6.1.336.2179.7j4j3j1.15.0...0.0...1ac.1.11.youtube.mLijTFGeKo8
+https://www.youtube.com/results?search_query=the+hong+kong+triad+thievery+corporation&oq=the+hong+kong+tri&gs_l=youtube.3.1.0l2.3171.5153.0.6186.17.12.0.4.4.0.111.936.10j2.12.0...0.0...1ac.1.11.youtube.4KlgJNakYl4
